# GPT-SoVITS.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  chinese-hubert-base-architecture.md
cli/: CMakeLists.txt
include/gpt_sovits/: gpt_sovits.h  hubert.h  roberta.h  sovits.h  t2s.h
python/: convert_hubert_to_gguf.py  convert_roberta_to_gguf.py  convert_sovits_flow_to_gguf.py  convert_sovits_generator_to_gguf.py  convert_sovits_quantizer_to_gguf.py  convert_sovits_ref_enc_to_gguf.py  convert_sovits_text_encoder_mrte_to_gguf.py  convert_sovits_text_encoder_post_to_gguf.py  convert_sovits_text_encoder_ssl_to_gguf.py  convert_sovits_text_encoder_text_to_gguf.py  convert_sovits_text_encoder_to_gguf.py  convert_t2s_to_gguf.py  torch_ckpt_utils.py
src/: CMakeLists.txt  hubert_block.cpp  hubert_loader.cpp  placeholder.cpp  t2s_block.cpp
src/hubert/: block.cpp  loader.cpp
src/roberta/: block.cpp  loader.cpp
src/sovits/: block.cpp  loader.cpp
src/t2s/: block.cpp  loader.cpp  session.cpp
tests/: CMakeLists.txt
tests/common/: cnpy.cpp  cnpy.h  npy_loader.h  test_backend.h
tests/hubert/: Narsil.asr_dummy.4.flac  generate_flac_reference.py  generate_reference.py  test_hubert_flac.cpp  test_hubert_load.cpp  test_hubert_parity.cpp  test_hubert_quantization.cpp
tests/roberta/: generate_reference.py  test_roberta_load.cpp  test_roberta_parity.cpp
tests/sovits/: test_sovits_flow.cpp  test_sovits_generator.cpp  test_sovits_quantizer.cpp  test_sovits_ref_enc.cpp  test_sovits_text_encoder.cpp  test_sovits_text_encoder_mrte.cpp  test_sovits_text_encoder_post.cpp  test_sovits_text_encoder_ssl.cpp  test_sovits_text_encoder_text.cpp
tests/sovits/ref/: v2_enc_p_input_quantized.npy  v2_enc_p_input_text.npy  v2_enc_p_output_logs_p.npy  v2_enc_p_output_m_p.npy  v2_enc_p_output_x.npy  v2_quantizer_codes.npy  v2_quantizer_decoded.npy  v2_ref_enc_input.npy  v2_text_encoder_mrte_ge_input.npy  v2_text_encoder_mrte_output.npy  v2_text_encoder_mrte_text_input.npy  v2_text_encoder_ssl_output.npy
tests/t2s/: generate_reference.py  test_t2s_infer.cpp  test_t2s_loader.cpp  test_t2s_session.cpp
tests/t2s/ref/: xy_dec.npy  xy_pos.npy
